[1.2.5]匿名功能改善&推送功能😎😎😎

--- a/src/css/decision_result.scss
+++ b/src/css/decision_result.scss
@@ -71,7 +71,6 @@
             border-color: $negative;
           }         
         }
-
         &::after{
           content: "";
           position: absolute;
@@ -87,6 +86,16 @@
         text-align: right;
         .avatars.no-name{
           justify-content: flex-end;   
+        }
+        .avatars.with-name{
+          span{
+            display: inline-block;
+            width: 82px;
+            text-align: right;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: middle;
+          }
         }
         li{
           img{
