--- a/src/css/decision_result.scss
+++ b/src/css/decision_result.scss
@@ -1,9 +1,34 @@
 @import './global.scss';
 .decision-result{
-  margin-top: 20px;
+  margin-top: 30px;
   background-color: darken(#423f3f, 2%);
   // box-shadow: 0 5px 7px rgba(#000, 0.2);
-  padding: 10px 0;
+  padding-top: 24px;
+  padding-bottom: 15px;
+  position: relative;
+  .switch-panel{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-50%);
+    button{
+      background-color: #4a4a4a;
+      line-height: 1;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      img{
+        width: 14px;
+        height: 14px;
+      }
+    }
+  }
   .state{
     margin-bottom: 10px;
     font-family: 'fuck';
