woring on comments...

--- a/src/css/decision_result.scss
+++ b/src/css/decision_result.scss
@@ -168,4 +168,15 @@
       }
     }
   }
+  .comments{
+    li{
+      .avatar{
+        img{
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
