--- a/src/css/decision_result.scss
+++ b/src/css/decision_result.scss
@@ -1,33 +1,121 @@
 @import './global.scss';
 .decision-result{
-  margin-top: 30px;
-  background-color: darken(#423f3f, 2%);
-  // box-shadow: 0 5px 7px rgba(#000, 0.2);
-  padding-top: 24px;
-  padding-bottom: 15px;
-  position: relative;
-  .switch-panel{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    transform: translateY(-50%);
-    button{
-      background-color: #4a4a4a;
-      line-height: 1;
-      width: 30px;
+  @keyframes notice {
+    0% {
+      transform: translateY(-30px) translateX(0);
+    }
+    25% {
+      transform: translateY(-30px) translateX(3px);
+    }
+    50%{
+      transform: translateY(-30px) translateX(0);
+    }
+    75% {
+      transform: translateY(-30px) translateX(-3px);
+    }
+    100% {
+      transform: translateY(-30px) translateX(0px);
+    }
+  }
+  .teach-result-switch{
+    font-family: 'fuck';
+    justify-content: center;
+    background-color: darken(#423f3f, 3%);
+    border-radius: 15px;
+    display: inline-block;
+    white-space: nowrap;
+    position: relative;
+    margin-bottom: 3px;
+    opacity: 0;
+    transform: scale(0);
+    // animation: notice 0.3s 3 infinite;
+    p{
+      display: inline-block;
+      vertical-align: middle;
+      font-size: 12px;
       height: 30px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto;
-      img{
-        width: 14px;
-        height: 14px;
+      line-height: 30px;
+      padding: 0 10px;
+      padding-right: 15px;
+      .point{
+        display: inline-block;
+        font-size: 8px;
+        margin-left: 3px;
       }
     }
+    form{
+      display: inline-block;
+      vertical-align: middle;
+      height: 100%;
+      font-size: 0;
+      .close-btn{
+        line-height: 1;
+        width: 30px;
+        text-align: center;
+        line-height: 30px;
+        border-radius: 0;
+        font-size: 10px;
+        .close{
+          font-size: 10px;
+        }
+      }
+    }
+  }
+  .switch-panel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    form{
+      position: relative;
+      &:first-child::after{
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 50%;
+        left: 100%;
+        bottom: 25%;
+        transform: translateX(0.5);
+        background-color: #fff;
+        opacity: 0.2;
+      }
+      .arrow{
+        width: 10px;
+        height: 10px;
+        position: absolute;
+
+        // width: 0;
+        // height: 0;
+        border-bottom: 10px solid red;
+        top: 0;
+        left: 0;
+      }
+    }
+    button{
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      border-radius: 50%;
+      margin: 0 10px;
+      opacity: 0.5;
+      &[disabled]{
+        background: transparent;
+        color: #fff;
+      }
+      &.selected{
+        opacity: 1;
+      }
+      span{
+        font-size: 10px;
+      }
+
+    }
+  }
+  .result-content{
+    background-color: darken(#423f3f, 2%);
+    border-radius: 5px;
+    padding: 15px 0;
+    margin-top: 10px;
   }
   .state{
     margin-bottom: 10px;
@@ -168,15 +256,82 @@
       }
     }
   }
+  .new-comment{
+    display: flex;
+    align-items: center;
+    background-color: darken(#423f3f, 5%);
+    border-radius: 20px;
+    margin: 0 10px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    height: 40px;
+    input{
+      flex: 1;
+      padding: 3px;
+      height: 30px;
+      line-height: 30px;
+      box-sizing: border-box;
+      text-align: left;
+    }
+    button{
+      font-size: 10px;
+      vertical-align: middle;
+      height: 30px;
+      line-height: 30px;
+      width: 40px;
+      text-align: center;
+    }
+  }
   .comments{
+    padding: 0 10px;
     li{
-      .avatar{
-        img{
-          width: 20px;
-          height: 20px;
-          border-radius: 50%;
+      font-family: 'fuck';
+      position: relative;
+      &:not(:last-child){
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        &::after{
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          left: 0;
+          bottom: 0;
+          border-bottom: 1px dashed #fff;
+          opacity: 0.1;
+          transform: scaleY(0.5);
         }
       }
+      .author{
+        font-size: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .avatar{
+          width: 24px;
+          height: 24px;
+          border-radius: 50%;
+          border: 1px solid #fff;
+        }
+        .info{
+          flex: 1;
+          margin-left: 10px;
+          text-align: left;
+          .time{
+            opacity: 0.2;
+          }
+        }
+      }
+      .content{
+        text-align: left;
+        margin-top: 5px;
+        font-size: 13px;
+      }
     }
+  }
+  .empty{
+    font-family: 'zcool-gdh';
+    font-size: 12px;
+    opacity: 0.6;
   }
 }
