--- a/src/css/decision_result.scss
+++ b/src/css/decision_result.scss
@@ -17,6 +17,14 @@
       transform: translateY(-30px) translateX(0px);
     }
   }
+  @keyframes loading {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
   .teach-result-switch{
     font-family: 'fuck';
     justify-content: center;
@@ -280,6 +288,14 @@
       line-height: 30px;
       width: 40px;
       text-align: center;
+      &[disabled]{
+        background-color: transparent;
+        color: #fff;
+      }
+      .loading{
+        display: inline-block;
+        animation: loading 1.2s linear infinite;
+      }
     }
   }
   .comments{
